doc/pjdfstest/tests/errors/etxtbsy/sidebar-items.js
window.SIDEBAR_ITEMS = {"fn":["exec_mounted"],"macro":["etxtbsy_test_case"]};